--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -293,7 +293,7 @@ A service or replication controller that is defined to use pods with the *role=w
 
 === Check Regions and Zones
 
-We have already labeled your nodes.
+We already labeled your nodes.
 
 Check the labels of the nodes:
 ----
@@ -383,36 +383,6 @@ Test the status of the registry with the curl command to communicate with the re
 ----
 
 Everything seems fine :-)
-
-=== Set Regions and Zones
-
-We have already labeled your nodes.
-
-Check the labels of the nodes:
-----
-[root@master ~]# oc get nodes --show-labels
-
-NAME                    STATUS                     AGE       LABELS
-infranode.example.com   Ready                      159d      beta.kubernetes.io/arch=amd64,beta.kubernetes.io/os=linux,kubernetes.io/hostname=infranode.example.com,region=infra,zone=infranodes
-master.example.com      Ready,SchedulingDisabled   159d      beta.kubernetes.io/arch=amd64,beta.kubernetes.io/os=linux,kubernetes.io/hostname=master.example.com,region=master
-node1.example.com       Ready                      159d      beta.kubernetes.io/arch=amd64,beta.kubernetes.io/os=linux,kubernetes.io/hostname=node1.example.com,region=primary,zone=east
-node2.example.com       Ready                      159d      beta.kubernetes.io/arch=amd64,beta.kubernetes.io/os=linux,kubernetes.io/hostname=node2.example.com,region=primary,zone=west
-node3.example.com       Ready                      159d      beta.kubernetes.io/arch=amd64,beta.kubernetes.io/os=linux,kubernetes.io/hostname=node3.example.com,region=primary,zone=north
-----
-
-You have a running OpenShift Container Platform environment across five hosts with one master and four nodes, divided into two regions: infra and primary.
-
-Check that registry, registry-console and router are running on the infranode:
-----
-[root@master ~]# oc get pods -o wide -n default
-
-NAME                      READY     STATUS    RESTARTS   AGE       IP              NODE
-docker-registry-1-26xs7   1/1       Running   5          159d      10.128.0.8      infranode.example.com
-router-1-xq3r6            1/1       Running   7          159d      192.168.0.101   infranode.example.com
-----
-
-As you can see, all infrastructure pods are running on the infranode, because we configured a default node selector for this.
-Please look https://blog.openshift.com/deploying-applications-to-specific-nodes/[here^] for more information.
 
 === Resource Management Lab
 
